apps/base/nginx-download/service.yml
apiVersion: v1
kind: Service
metadata:
  name:  nginx
  namespace: nginx-download
spec:
  selector:
    app:  nginx
  type:  ClusterIP
  ports:
    - name:  http
      port:  80
